# jonitor

./: .editorconfig  Cargo.toml  README.MD  build.rs  jonitor.rc
.github/workflows/: build.yml
src/: hwinfo.rs  main.rs
web/: eslint.config.js  index.html  package-lock.json  package.json  stylelint.config.js  tsconfig.json  vite.config.js
web/public/: manifest.json
web/src/: charts.ts  main.css  main.ts  tables.ts  util.ts
